--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body {
     color: crimson;
-    background: white;
-
-}
+    background: black;
+      font-family: "Montserrat", sans-serif;
+    
+    }
+    
 header{
     border-bottom: salmon 2px rgb(237, 115, 237);
 padding: 20px;
@@ -17,3 +19,14 @@ display: flex;
 justify-content: center;
 }
 
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1{
+    font-size: 40px;
+}
+
+p{
+    font-size: 20px;
+}
