--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     color: crimson;
     background: black;
       font-family: "Montserrat", sans-serif;
-    
     }
     
 header{
@@ -30,3 +29,11 @@ h1{
 p{
     font-size: 20px;
 }
+img {
+    height: 200px;
+  }
+  .categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+  }
